--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     {% if user.is_authenticated %}
-                    <li><a href="#" class="nav-link px-2 link-dark">+ New</a></li>
+                    <li><a href="{% url 'article_new' %}" 
+                        class="nav-link px-2 link-dark">+ New</a></li>
                 </ul>
                 <div class="mr-auto">
                     <ul class="navbar-nav">
